yozuvlarga text nomli umumiy klass berildi

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="row">
                     <div class="hero-desc">
                         <h2 class="hero-title title">Running the show has never been so easy.</h2>
-                        <p class="hero-text">
+                        <p class="hero-text text">
                             Ready to put the human back in HR? Clerksy helps you set the stage with an
                             inclusive and compliant workplace.
                         </p>
@@ -62,13 +62,13 @@
                 </div>
                 <div class="story-desc">
                     <h2 class="story-title title">Put the human <br>back in HR.</h2>
-                    <p class="story-text">Your employees are the real stars. Show the love and help them perform!</p>
+                    <p class="story-text text">Your employees are the real stars. Show the love and help them perform!</p>
                 </div>
             </div>
             <div class="story-content row">
                 <div class="story-desc">
                     <h2 class="story-title title">You don’t have to <br>play all the parts.</h2>
-                    <p class="story-text">Sales, accounting, HR— Oh My! You can’t do it all - let Clerksy help.</p>
+                    <p class="story-text text">Sales, accounting, HR— Oh My! You can’t do it all - let Clerksy help.</p>
                 </div>
                 <div class="story-img">
                     <img src="img/play-parts.svg" alt="play-parts" width="492px" height="423px">
@@ -95,23 +95,23 @@
             <ul class="customers-list row">
                 <li class="customers-item">
                     <img class="customers-img" src="img/informs.svg" alt="informs" width="117" height="145">
-                    <p class="customers-text">Educates & Informs</p>
-                    <p class="customers-text">Employee Expectations</p>
+                    <p class="customers-text text">Educates & Informs</p>
+                    <p class="customers-text text">Employee Expectations</p>
                 </li>
                 <li class="customers-item">
                     <img class="customers-img" src="img/business.svg" alt="business" width="79" height="160">
-                    <p class="customers-text">Protects Your Business</p>
-                    <p class="customers-text">Just in Case</p>
+                    <p class="customers-text text">Protects Your Business</p>
+                    <p class="customers-text text">Just in Case</p>
                 </li>
                 <li class="customers-item">
                     <img class="customers-img" src="img/stores.svg" alt="stores" width="66" height="145">
-                    <p class="customers-text">Manages & Stores</p>
-                    <p class="customers-text">Important Documents</p>
+                    <p class="customers-text text">Manages & Stores</p>
+                    <p class="customers-text text">Important Documents</p>
                 </li>
                 <li class="customers-item">
                     <img class="customers-img" src="img/girl-hand.svg" alt="girl-hand" width="95" height="150">
-                    <p class="customers-text">Create a Healthy</p>
-                    <p class="customers-text">Work Environment</p>
+                    <p class="customers-text text">Create a Healthy</p>
+                    <p class="customers-text text">Work Environment</p>
                 </li>
             </ul>
         </div>
@@ -119,10 +119,11 @@
     <section id="employess">
         <div class="container">
             <h2 class="employees-title title">Employees come in all shapes and <br>sizes. Find the right fit.</h2> 
-            <p class="employess-text">Focus on casting and screening. Let Clerksy handle contracts, resolve any on set-conflicts <br>and make sure you are compliant with work and safety boards.</p> 
+            <p class="employess-text text">Focus on casting and screening. Let Clerksy handle contracts, resolve any on set-conflicts <br>and make sure you are compliant with work and safety boards.</p> 
             <img class="employees-img" src="img/employes.svg" alt="employees" width="1180" height="335">
         </div>
     </section>
+    
 
 </body>
 
