--- a/index.html
+++ b/index.html
@@ -123,7 +123,22 @@
             <img class="employees-img" src="img/employes.svg" alt="employees" width="1180" height="335">
         </div>
     </section>
-    
+    <section id="scenes">
+        <div class="container">
+            <div class="row">
+                <div class="scenes-content">
+                    <h2 class="scenes-title title">How the scenes <br>fit together</h2>
+                    <p class="scenes-text text">
+                        Employee Training & Development, Diversity <br>
+                        & Inclusion Programs, and Conflict <br>
+                        Resolution.</p>
+                </div>
+                <div class="scenes-img">
+                    <img src="img/together.svg" alt="together" width="492" height="423">
+                </div>
+            </div>
+        </div>
+    </section>
 
 </body>
 
