services qismi yakunlandi

--- a/index.html
+++ b/index.html
@@ -139,6 +139,44 @@
             </div>
         </div>
     </section>
+    <section id="services">
+        <div class="container">
+            <div class="services-content">
+                <h2 class="services-title title">Consider everyone's best interest</h2>
+                <p class="services-text text">HR is for everyone. Clerksy can help you.</p>
+            </div>
+            <div class="services-cards row">
+                <div class="services-card-item">
+                    <img src="img/protect.svg" alt="Protect Your Company">
+                    <h2 class="card-title">Protect Your Company</h2>
+                    <ul class="card-list">
+                        <li class="card-list-item">Compliance Audits & Training</li>
+                        <li class="card-list-item">Employee Data Storage</li>
+                        <li class="card-list-item">Policy Drafting</li>
+                    </ul>
+                </div>
+                <div class="services-card-item card-long">
+                    <img src="img/success.svg" alt="Set Your Employees Up For Success">
+                    <h2 class="card-title">Set Your Employees Up For Success</h2>
+                    <ul class="card-list">
+                        <li class="card-list-item">Learning & Development</li>
+                        <li class="card-list-item">Employee Relations</li>
+                        <li class="card-list-item">Benefit Management</li>
+                        <li class="card-list-item">Employee Performance</li>
+                    </ul>
+                </div>
+                <div class="services-card-item">
+                    <img src="img/landscape.svg" alt="Know Your Industry's Legal Landscape">
+                    <h2 class="card-title">Know Your Industry's Legal Landscape</h2>
+                    <ul class="card-list">
+                        <li class="card-list-item">Work Place Investigations</li>
+                        <li class="card-list-item">Employee Mediations</li>
+                        <li class="card-list-item">Performance Tracking</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
 
 </body>
 
