prices sectioni yakullandi

--- a/index.html
+++ b/index.html
@@ -177,6 +177,31 @@
             </div>
         </div>
     </section>
+    <section id="prices">
+        <div class="container">
+            <h2 class="prices-title title">It's easy as 1, 2, 3</h2>
+            <p class="prices-text">Clerksy can help use your unique business needs. Here's how:</p>
+            <div class="price-info">
+                <div class="price-item">
+                    <div>
+                        <p class="price-text">Fill out a form and tell us what you're looking for:</p>
+                        <h2 class="price-title title">5 minutes</h2>
+                    </div>
+                    <img src="img/toparrow.svg" alt="toparrow">                    
+                </div>
+                <div class="price-item">
+                    <div>
+                        <p class="price-text text">Time it will take a Clerksy rep to follow up:</p>
+                        <h2 class="price-title title">24 hours</h2>
+                    </div>
+                    <img src="img/bottomarrow.svg" alt="bottomarrow"> 
+                </div>
+                <div class="price-item row">
+                    <img src="img/price.svg" alt="price" width="290" height="183"> 
+                </div>
+            </div>
+        </div>
+    </section>
 
 </body>
 
