Download E-book qismi yakullandi

--- a/index.html
+++ b/index.html
@@ -200,6 +200,23 @@
                     <img src="img/price.svg" alt="price" width="290" height="183"> 
                 </div>
             </div>
+            <a href="#!">Book Free Discovery Call</a>
+        </div>
+    </section>
+    <section id="ebook">
+        <div class="container">
+            <div class="ebook-row">
+                <div class="ebook-content">
+                    <h2 class="ebook-title title">Not just another <br>HR resource.</h2>
+                    <p class="ebook-text text">Simple. Entertaining. Informative.</p>
+                    <div class="ebook-link" ><a href="#!">Download E-book</a></div>
+                    
+                </div>
+                <div class="ebook-img">
+                    <img src="img/ebook.svg" alt="ebook">
+                </div>
+            </div>
+            
         </div>
     </section>
 
