--- a/index.html
+++ b/index.html
@@ -246,6 +246,31 @@
             </div>
         </div>
     </section>
+    <footer id="footer">
+        <div class="container">
+            <div class="footer-social">
+                <img src="img/footer-logo.svg" alt="footer-logo">
+                <h2>A people company.</h2>
+                <div class="social-link">
+                    <a href="#!"><img src="img/Facebook.svg" alt="Facebook"></a>
+                    <a href="#!"><img src="img/twitter.svg" alt="twitter"></a>
+                    <a href="#!"><img src="img/linkedin.svg" alt="linkedin"></a>
+                    <a href="#!"><img src="img/instagram.svg" alt="instagram"></a>   
+                </div>
+            </div>
+            <hr>
+            <div class="footer-link">
+                <p>© 2020 Clerksy, Inc. Clerksy is a registered trademark of Clerksy, Inc.</p>
+                <ul class="footer-list">
+                    <li class="footer-item"><a href="#!">Privacy Policy</a></li>
+                    <li class="footer-item"><a href="#!">Terms of Service</a></li>
+                    <li class="footer-item"><a href="#!">GDPR</a></li>
+                    <li class="footer-item"><a href="#!">Careers</a></li>
+                    <li class="footer-item"><a href="#!">Press Kit</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
